# rs_discogs_search

./: Cargo.toml  Makefile  app.py  docker-compose.yml
samples/: artist.xml  label.xml  master.xml  release.xml
src/: artist.rs  doc.rs  indexer.rs  label.rs  lib.rs  main.rs  master.rs  release.rs  stream.rs
src/doc/: artist.rs  label.rs  master.rs  release.rs
