[package]
name = "rs_discogs_search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
quick-xml = {version = "0.27.1", features = ["serialize"]}
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
flate2 = "1.0"
serde_json = "1.0.132"
opensearch = "2.3.0"
tokio = { version = "1.41.1", features = ["full", "tracing"]  }